<?xml version="1.0" encoding="utf-8"?>
    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/card_story"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:layout_gravity="center"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/name_story"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="16dp"
                tools:text="@string/dummy_name" />

            <TextView
                android:id="@+id/date_story"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dummy_date"
                android:textSize="10sp"
                app:layout_constraintTop_toBottomOf="@+id/name_story"
                tools:layout_editor_absoluteX="16dp" />

            <ImageView
                android:id="@+id/image_story"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_story"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/desc_story"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="150"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_story"
                tools:text="@string/dummy_desc" />




        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.cardview.widget.CardView>